fixed alignment  to right for google table

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -125,10 +125,12 @@ h4.narrative {border-bottom: 1px solid black; margin-top: 20px !important;}
 .bold_column_font {
   font-weight: bold;
   color: black;
+  text-align: right;
 }
 .data_cell_font {
   // font-weight: bold;
    color: black;
+   text-align: right;
  }
  
 #div_RYG_datatable_1{display:  block; clear: both; margin: auto; width: 100%;  }
